cordone-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  labels:
    app: nginx-app
spec:
  containers:
  - name: nginx-cordone
    image: nginx
    ports:
    - containerPort: 80
  restartPolicy: OnFailure
