dev-test-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-test-pod
  namespace: default
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
