my-static-pods.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-static-pod
spec:
  containers:
  - name: nginx-static-pod
    image: nginx
