nodeName.yml
apiVersion: v1
kind: Pod
metadata:
  name: node-name-pod
  labels:
    app: nginx-node-name-app
spec:
  containers:
  - name: nginx-node-name-pod
    image: nginx
    ports:
    - containerPort: 80
  nodeName: k8-worker2
