pv-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: pv-pod
spec:
  restartPolicy: Never
  containers:
  - name: busybox3
    image: busybox
    command: ['sh', '-c', 'while true; do echo "Nice!" > /output/success.txt; cat /output/success.txt; sleep 5; done']
    volumeMounts:
    - name: pv-storage
      mountPath: /output
  volumes:
  - name: pv-storage
    persistentVolumeClaim:
      claimName: my-pvc
