test-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx-app1
  ports:
    port: 80
  - protocol: TCP
  type: NodePort
